@@ -79,7 +79,7 @@ Available tasks for service docs: 'edit', 'delete', 'list', 'upload', 'get'
 .IP
 edit: Edit a document
 .IP
-Requires: title Optional: format, editor
+Requires: title Optional: format, editor, folder
 .IP
 delete: Delete documents
 .IP
