@@ -4,14 +4,16 @@ svn HEAD
  * Calendar service supports multiple calendar operations.
  * More results are returned by queries, and control over number of results given to user with config file options.
  * Added --format as optional option to docs upload and download.
+ * Added --folder as optional option to docs edit.
  * Behavior of --date option for calendar service improved.
 
  Bugfixes
- * Uploads to folders supported for more recent versions of gdata-python-client.
+ * Uploads to folders in docs supported.
  * Gdata dependency added to setup.py.
  * Asking for help on a non-existant service cleanly and helpfully exits. (Thanks, ferranb!)
  * Errors encountered while uploading to Picasa are printed correctly rather than crashing. (Thanks, bartosh!)
  * Uploading files to Docs without extensions obeys --format or assumes an extension.
+ * Uploading multiple files to Docs will name each file after its filename, rather than the first filename encountered.
 
 version 0.9.7
  Enhancements:
